Généralisation du tarif manutention en tarif, ceci en ajoutant un type rate_type qui indiquera le type de tarif (redevance marchandise, tarif stationnnement, tarif manutention)

--- a/servoo_sales/views/handling_rate_views.xml
+++ b/servoo_sales/views/handling_rate_views.xml
@@ -5,6 +5,7 @@
         <field name="model">servoo.handling.rate</field>
         <field name="arch" type="xml">
             <tree string="Handling Rate" editable="top">
+                <field name="rate_type" />
                 <field name="name" />
                 <field name="category_id" />
                 <field name="office_code_id" />
