Ajout du menu PDA dans le sous menu Clients, permettant aux fiances d'enregistrer le paiement relatif aux PDA

--- a/servoo_finance/views/servoo_finance_menu.xml
+++ b/servoo_finance/views/servoo_finance_menu.xml
@@ -28,6 +28,7 @@
 <!--                  action="servoo_finance.action_account_invoice_report_all"/>-->
 
             <menuitem id="menu_finance_receivables" name="Customers" sequence="1">
+                <menuitem id="finance_shipping_pda_invoice_menu" action="servoo_shipping.action_shipping_pda_to_invoice" sequence="1"/>
                 <menuitem id="menu_sale_order" name="Orders" action="sale.action_quotations" sequence="1"/>
                 <menuitem id="menu_action_move_out_invoice_type" action="action_readonly_move_out_invoice_type" sequence="2"/>
                 <menuitem id="menu_action_move_out_refund_type" action="account.action_move_out_refund_type" sequence="3"/>
