--- a/servoo_finance/views/account_payment_view.xml
+++ b/servoo_finance/views/account_payment_view.xml
@@ -9,6 +9,10 @@
                 <field name="journal_id" position="after">
                     <field name="bank_statement_id" required="1" domain="[('journal_id', '=', journal_id), ('state', '=', 'open')]"/>
                     <field name="account_bank_statement_line_id" />
+                    <field name="receiver" required="0" />
+                </field>
+                <field name="ref" position="after">
+                    <field name="apm_invoice_number" readonly="1" />
                 </field>
             </field>
         </record>
