--- a/servoo_sales/report/sale_report_templates.xml
+++ b/servoo_sales/report/sale_report_templates.xml
@@ -194,6 +194,11 @@
                                         </t>
                                     </font>
                                 </br>
+                                <br>
+                                    <t t-if="o.partner_id.phone">
+                                        TEL: <span t-field="o.partner_id.phone"/>
+                                    </t>
+                                </br>
                             </td>
                         </tr>
                         <tr valign="top">
@@ -489,7 +494,7 @@
                         </b>
                     </p>
                     <p style="text-transform:uppercase;">
-                        Issued by : <span t-field="doc.user_id" />
+                        Issued by : <span t-field="doc.create_uid" />
                     </p>
                             </div>
                             <div class="col-2" />
