--- a/servoo_finance/views/account_payment_view.xml
+++ b/servoo_finance/views/account_payment_view.xml
@@ -7,12 +7,29 @@
             <field name="inherit_id" ref="account.view_account_payment_form" />
             <field name="arch" type="xml">
                 <field name="journal_id" position="after">
-                    <field name="bank_statement_id" required="1" domain="[('journal_id', '=', journal_id), ('state', '=', 'open')]"/>
+                    <field name="bank_statement_id" required="1" domain="[('journal_id', '=', journal_id), ('state', '=', 'open')]"
+                    attrs="{'readonly': [('state', '!=', 'draft')]}"/>
                     <field name="account_bank_statement_line_id" />
-                    <field name="receiver" required="0" />
+                    <field name="receiver" required="0" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
                 </field>
                 <field name="ref" position="after">
                     <field name="apm_invoice_number" readonly="1" />
+                    <field name="payment_mode" required="1" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
+                </field>
+                <field name="payment_method_line_id" position="replace">
+
+                </field>
+            </field>
+        </record>
+
+        <record model="ir.ui.view" id="servoo_account_payment_tree">
+            <field name="name">servoo.account.payment.tree</field>
+            <field name="model">account.payment</field>
+            <field name="inherit_id" ref="account.view_account_payment_tree" />
+            <field name="arch" type="xml">
+                <field name="payment_method_line_id" position="replace">
+                    <field name="payment_mode" required="1"/>
+                    <field name="ref" />
                 </field>
             </field>
         </record>
