--- a/servoo_finance/wizard/wizard_account_payment_register_view.xml
+++ b/servoo_finance/wizard/wizard_account_payment_register_view.xml
@@ -7,6 +7,7 @@
             <field name="inherit_id" ref="account.view_account_payment_register_form" />
             <field name="arch" type="xml">
                 <field name="journal_id" position="after">
+                    <field name="payment_mode" required="1"/>
                     <field name="bank_statement_id" required="1" domain="[('journal_id', '=', journal_id), ('state', '=', 'open')]"/>
                     <field name="account_bank_statement_line_id" />
                     <field name="receiver" required="0" />
