--- a/servoo_finance/views/account_payment_view.xml
+++ b/servoo_finance/views/account_payment_view.xml
@@ -13,8 +13,19 @@
                     <field name="receiver" required="0" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
                 </field>
                 <field name="ref" position="after">
+                    <field name="payment_label" required="1" />
                     <field name="apm_invoice_number" readonly="1" />
                     <field name="payment_mode" required="1" attrs="{'readonly': [('state', '!=', 'draft')]}"/>
+<!--                    <group col="4" attrs="{'invisible': [('payment_mode', '=', 'cash')]}">-->
+                        <field name="bank_id" attrs="{'invisible': [('payment_mode', '=', 'cash')]}"/>
+                        <field name="carrier" attrs="{'invisible': [('payment_mode', '=', 'cash')]}"/>
+                        <field name="number" attrs="{'invisible': [('payment_mode', '=', 'cash')]}"/>
+                        <field name="date_payment" attrs="{'invisible': [('payment_mode', '=', 'cash')]}"/>
+                        <field name="invoice_amount" attrs="{'invisible': [('payment_mode', '=', 'cash')]}"/>
+                        <field name="ret_tva" attrs="{'invisible': [('payment_mode', '=', 'cash')]}"/>
+                        <field name="ret_ir_is" attrs="{'invisible': [('payment_mode', '=', 'cash')]}"/>
+<!--                    </group>-->
+
                 </field>
                 <field name="payment_method_line_id" position="replace">
 
@@ -30,6 +41,7 @@
                 <field name="payment_method_line_id" position="replace">
                     <field name="payment_mode" required="1"/>
                     <field name="ref" />
+                    <field name="payment_label" />
                 </field>
             </field>
         </record>
