--- a/servoo_finance/views/payment_operation_file_view.xml
+++ b/servoo_finance/views/payment_operation_file_view.xml
@@ -9,7 +9,7 @@
             <field name="arch" type="xml">
                 <button name="action_draft" position="before">
                     <button type="action" string="Create Payment Request"
-                            context="{'default_file_reference': name}"
+                            context="{'default_file_reference': name, 'default_file_client_id': partner_id}"
                             name="%(action_create_payment_request)d" attrs="{'invisible': [('state', '!=', 'open')]}"
                     />
                     <button type="action" string="Create Cash Piece"
@@ -67,7 +67,7 @@
             <field name="arch" type="xml">
                 <button name="action_draft" position="before">
                     <button type="action" string="Create Payment Request"
-                            context="{'default_file_reference': name}"
+                            context="{'default_file_reference': name, 'default_file_client_id': partner_id}"
                             name="%(action_create_payment_request)d" attrs="{'invisible': [('state', '!=', 'draft')]}"
                     />
                     <button type="action" string="Create Cash Piece"
@@ -121,7 +121,7 @@
 <!--        Stevedoring File-->
 
         <record model="ir.ui.view" id="view_payment_stevedoring_form">
-            <field name="name">view.payment.shipping.form</field>
+            <field name="name">view.payment.stevedoring.form</field>
             <field name="model">servoo.stevedoring.file</field>
             <field name="inherit_id" ref="servoo_stevedoring.view_servoo_stevedoring_file_form" />
             <field name="arch" type="xml">
@@ -184,7 +184,7 @@
             <field name="arch" type="xml">
                 <button name="action_draft" position="before">
                     <button type="action" string="Create Payment Request"
-                            context="{'default_file_reference': name}"
+                            context="{'default_file_reference': name, 'default_file_client_id': partner_id}"
                             name="%(action_create_payment_request)d" attrs="{'invisible': [('state', '!=', 'draft')]}"
                     />
                     <button type="action" string="Create Cash Piece"
